Name:               ManningBook
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
Maintainer:         Tony Morris
Copyright:          Tony Morris
Synopsis:           A script library for writing a book for Manning Publications
Category:           Development
Description:        A script library for writing a book for Manning Publications
Homepage:           https://github.com/tonymorris/manning-book/
Cabal-Version:      >= 1.2
Build-Type:         Simple

Flag small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:
                    base < 5 && >= 3,
                    mtl,
                    directory,
                    filepath,
                    http-enumerator,
                    enumerator,
                    bytestring,
                    containers,
                    zip-archive,
                    FilePather,
                    Command

  GHC-Options:
                    -Wall

  Hs-Source-Dirs:
                    src

  Exposed-Modules:  System.Build.ManningBook,
                    System.Build.ManningBook.Config,
                    System.Build.ManningBook.Build

